Fix: Extra scrollbars on macOS safari

--- a/assets/gui/css/alas-mobile.css
+++ b/assets/gui/css/alas-mobile.css
@@ -41,3 +41,9 @@
 #pywebio-scope-schedulers {
     grid-auto-flow: row;
 }
+
+#pywebio-scope-running,
+#pywebio-scope-pending,
+#pywebio-scope-waiting {
+    overflow-y: auto;
+}
